<resources>
    <string name="app_name">Cyclops</string>
    <string name="loading">Please wait...</string>
    <string name="internet_connection">Internet Connection seems to be offline. Please check you Internet
        Connectivity.
    </string>
    <string name="welcome_ete">Welcome to Cyclops</string>
    <string name="simultaneous">Simultaneous Remote Services</string>
    <string name="email">Email</string>
    <string name="otp_code">OTP Code</string>
    <string name="p_enter_otp">Please enter OTP</string>
    <string name="city_state_country">City, State, Country</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="i_am">I am a :</string>
    <string name="input_role">Input Role</string>
    <string name="select">Select</string>
    <string name="already_exists">Already exists</string>
    <string name="login_chat_failed">Login chat failed</string>
    <string name="download_failed">Download failed</string>
    <string name="password">Password</string>
    <string name="keep_login">Keep me logged in</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_content1">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</string>
    <string name="welcome_content2">Established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution.</string>
    <string name="not_available_operation">Not Available Operation</string>
    <string name="not_ready_try_again">Not ready yet, Try again</string>
    <string name="edit">Edit</string>
    <string name="coming_soon">Coming soon..</string>
    <string name="coming_soon_ar">Object Tracking Function coming soon.</string>
    <string name="clear">Clear</string>
    <string name="complete">Complete</string>
    <string name="interrupted">Interrupted</string>
    <string name="submit">Submit</string>
    <string name="confirm_reset">Confirm Reset</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_equipment">Edit Equipment</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="accept_terms">I accept the Terms of Use</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="p_select_user_type">Please select user type</string>
    <string name="p_select_other_user_type">Please select other user type</string>
    <string name="p_select_service_type">Please select service type</string>
    <string name="p_select_asset_type">Please select asset type</string>
    <string name="p_select_make">Please select make</string>
    <string name="p_select_model">Please select model</string>
    <string name="p_select_skill">Please select skill</string>
    <string name="p_enter_eq_location">Please enter location of the equipment</string>
    <string name="p_enter_eq_asset_name">Please enter asset name of the equipment</string>
    <string name="p_enter_eq_internal_id">Please enter internal id of the equipment</string>
    <string name="p_select_warranty_start_date">Please select warranty start date</string>
    <string name="p_select_preferred_date">Please select preferred date</string>
    <string name="p_select_preferred_time">Please select preferred time</string>
    <string name="p_select_assign_date">Please select assign date</string>
    <string name="p_select_assign_time">Please select assign time</string>
    <string name="p_wait_admin_approve">Added successfully. Please wait till admin approves this</string>
    <string name="p_select_warranty_period">Please select warranty period</string>
    <string name="p_pick_certified_doc">Please pick a certified doc file</string>
    <string name="p_pick_author_doc">Please pick a authorized doc</string>
    <string name="p_enter_user_name">Please enter user name</string>
    <string name="p_enter_user_role">Please enter role</string>
    <string name="p_enter_technician_name">Please enter technician name</string>
    <string name="invalid_technician_name">Invalid technician name</string>
    <string name="p_enter_company_name">Please enter company name</string>
    <string name="p_enter_correct_otp">Please enter correct otp</string>
    <string name="p_enter_city_state_country">Please enter City, State and Country</string>
    <string name="p_enter_full_name">Please enter full name</string>
    <string name="p_enter_email">Please enter email</string>
    <string name="p_enter_address">Please enter address</string>
    <string name="expired_sr">This SR expired</string>
    <string name="closed_sr">This SR closed</string>
    <string name="image_shared_via_chat">Image shared via chat</string>
    <string name="annotation_shared_via_chat">Annotation shared via chat</string>
    <string name="annotation_sharing_via_chat">Annotation is being shared via chat</string>
    <string name="video_shared_via_chat">Video shared via chat</string>
    <string name="video_sharing_via_chat">Video is uploading via chat</string>
    <string name="image_sharing_via_chat">Photo is uploading via chat</string>
    <string name="p_enter_phone">Please enter phone</string>
    <string name="p_enter_valid_phone">Please enter valid phone</string>
    <string name="please_check_yes"> Please check \"YES\" option</string>
    <string name="email_not_match">Emails don\'t match</string>
    <string name="confirm_password_not_match">Confirm password does not match</string>
    <string name="p_enter_valid_email">Please enter valid email</string>
    <string name="p_enter_confirm_email">Please enter confirm email</string>
    <string name="p_enter_password">Please enter password</string>
    <string name="space_not_use_in_password">\"Space\" is invalid for password</string>
    <string name="p_accept_terms">Please accept terms</string>
    <string name="location">Location</string>
    <string name="want_end_session">Are you sure want to end your session?</string>
    <string name="join_info">Joining Info</string>
    <string name="camera_sharing_stopped">Camera Sharing has been stopped.</string>
    <string name="recording_working">Recording has been turned on.</string>
    <string name="service_request_number">Service Request Number</string>
    <string name="mute_my_audio">Mute my audio</string>
    <string name="mute_other_audio">Mute participant\'s audio</string>
    <string name="notifications">Notifications</string>
    <string name="my_technician_network">MY TECHNICIAN NETWORK</string>
    <string name="edit_competence">Edit Competency</string>
    <string name="add_competence">Add Competency</string>
    <string name="new_service_request">New Service Request</string>
    <string name="location_of_equipment">Location of the Equipment</string>
    <string name="equipment_asset_name">Equipment Asset Name</string>
    <string name="internal_equipment_id">Internal Equipment ID#</string>
    <string name="warranty_start_date">Warranty Start Date</string>
    <string name="warranty_period">Warranty Period(months)</string>
    <string name="make">Make</string>
    <string name="make_of_the_equipment">Make of the Equipment</string>
    <string name="service_type">Service Type</string>
    <string name="select_equipment_asset_name">Select Equipment Asset Name</string>
    <string name="equipment_model_type">Equipment Model / Type</string>
    <string name="description_optional">Description(Optional)</string>
    <string name="reason_to_reassign">Reason to assign</string>
    <string name="preferred_date">Preferred Date</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="preferred_time">Preferred Time</string>
    <string name="duration">Duration(Hour)</string>
    <string name="max_24">Max 24 Hours</string>
    <string name="equipment_model_number">Equipment Model Number</string>
    <string name="register">Register</string>
    <string name="resend">Resend</string>
    <string name="please_end_call_before_exit">Please end call before exit</string>
    <string name="create_service_request">Create Service Request</string>
    <string name="ar_procedures">AR Procedures</string>
    <string name="technical_video">Technical Videos</string>
    <string name="tech_forum">Tech Forum</string>
    <string name="my_technical_note">My Technical Notes</string>
    <string name="my_technical_video">My Technical Video</string>
    <string name="my_service_request">My Service Request</string>
    <string name="gemba_now">Gemba Now!</string>
    <string name="cyclopedian">Cyclopedian</string>
    <string name="let_update_location">Let’s update your contact information</string>
    <string name="account_profile">Account Profile</string>
    <string name="password_reset">Reset Password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="profile">Profile</string>
    <string name="decline">Decline</string>
    <string name="join_now">Join Now</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="my_tech_network">My Tech Network</string>
    <string name="my_equipment">My Equipment</string>
    <string name="equipment">Equipment</string>
    <string name="model">Model</string>
    <string name="invalid_date_time">Invalid date and time</string>
    <string name="invalid_user">Invalid User</string>
    <string name="logout">Logout</string>
    <string name="incoming_request">Incoming Service Request</string>
    <string name="accepted_service_request">Accepted Service Request</string>
    <string name="my_competencies">My Competencies</string>
    <string name="you_are_an_expert">You are an expert already</string>
    <string name="he_is_an_expert">He is an expert already</string>
    <string name="chanel_name">Cyclops</string>
    <string name="p_select_yes_option">Please select \"Yes\" option</string>
    <string name="default_notification_channel_id">3232321</string>
    <string name="p_end_record">Please end record</string>
    <string name="record_started">Record started successfully</string>
    <string name="record_ended">Record ended successfully</string>
    <string name="invalid_file">Invalid File</string>
    <string name="invalid_equipment">Invalid equipment, Please update this equipment.</string>
    <string name="empty">Empty</string>
    <string name="new_notification">New</string>
    <string name="about">About</string>
    <string name="about_myself">About Myself</string>
    <string name="company">Company</string>
    <string name="my_service_brand">I service / use these brands</string>
    <string name="save">Save</string>
    <string name="p_enter_description">Please enter description</string>
    <string name="add_more">+ Add more</string>
    <string name="update_note">Update Note</string>
    <string name="select_image_source">Select Image From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="view_technical_note">View Technical Note</string>
    <string name="title">Title</string>
    <string name="how_to_fix_this_issue">How to fix this issue</string>
    <string name="enter_note">Enter note here</string>
    <string name="text">Text</string>
</resources>