<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_black_left_arrow2" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/let_update_location"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_2"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/company"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_company_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tv_company_name"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@id/btn_edit_company_name"
            android:background="@drawable/round_grey_bottom_border"
            android:gravity="center|left"
            android:hint="@string/p_enter_company_name"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/btn_edit_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_company_name"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:padding="7dp"
            android:text="@string/edit"
            android:textColor="@color/orange"
            android:textSize="17dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_company_name"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tv_address_title"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@id/btn_edit_email"
            android:background="@drawable/round_grey_bottom_border"
            android:gravity="center|left"
            android:hint="@string/p_enter_address"
            android:inputType="textPostalAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/btn_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address_title"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:padding="7dp"
            android:text="@string/edit"
            android:textColor="@color/orange"
            android:textSize="17dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_address_2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_address"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/city_state_country"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_address_2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tv_address_2_title"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@id/btn_edit_address_2"
            android:background="@drawable/round_grey_bottom_border"
            android:gravity="center|left"
            android:hint="@string/p_enter_city_state_country"
            android:inputType="textPostalAddress"
            android:maxLength="20"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/btn_edit_address_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address_2_title"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:padding="7dp"
            android:text="@string/edit"
            android:textColor="@color/orange"
            android:textSize="17dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_save_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/et_address_2"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/round_orange_rect"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </RelativeLayout>
</ScrollView>
