<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/tv_full_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_name"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_full_name_title"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@id/btn_edit_full_name"
            android:background="@color/transparent"
            android:gravity="center|left"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/btn_edit_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_full_name_title"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="@string/edit"
            android:visibility="invisible"
            android:textColor="@color/orange"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_full_name"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_title"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@id/btn_edit_email"
            android:background="@color/transparent"
            android:gravity="center|left"
            android:hint="@string/p_enter_email"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/btn_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_title"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="@string/edit"
            android:visibility="invisible"
            android:textColor="@color/orange"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/et_office_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address_title"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@id/btn_edit_address"
            android:background="@color/transparent"
            android:gravity="center|left"
            android:hint="@string/empty"
            android:inputType="textPostalAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/btn_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address_title"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="@string/edit"
            android:visibility="invisible"
            android:textColor="@color/orange"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tv_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_office_address"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/mobile_number"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_title"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="60dp"
            android:layout_toLeftOf="@id/btn_edit_phone"
            android:background="@color/transparent"
            android:gravity="center|left"
            android:hint="@string/p_enter_phone"
            android:inputType="phone"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/btn_edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_title"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:text="@string/edit"
            android:visibility="invisible"
            android:textColor="@color/orange"
            android:textSize="17dp" />

    </RelativeLayout>
</ScrollView>
