<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/about_myself"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description_title"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_grey_bottom_border"
            android:gravity="top"
            android:maxLines="5"
            android:hint="@string/p_enter_description"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:minHeight="40dp"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_manage_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_description"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/my_service_brand"
            android:textColor="@color/grey_dark"
            android:textSize="15dp" />

        <com.nex3z.flowlayout.FlowLayout
            android:id="@+id/fl_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_manage_skill"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btn_add_skill"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingHorizontal="10dp"
                android:layout_below="@id/fl_skills"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:text="@string/add_more"
                android:textColor="@color/white"
                android:background="@drawable/round_orange_rect" />

        </com.nex3z.flowlayout.FlowLayout>

    </RelativeLayout>
</ScrollView>
