<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:gravity="center"
            android:text="@string/select_image_source"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginBottom="@dimen/dp10">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp45"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@drawable/sp_button"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp45"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@drawable/sp_button"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
